gems updated correctly + fixed button pass round
